--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.1.0"
   },
   "devDependencies": {
